# SquaredApp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml
.github/workflows/: docs.yml  release-cli.yml  release-host.yml
android/: AndroidManifest.xml
assets/icons/: squared.icns  squared.rc
config/: CMakeLists.txt  config.h.in  config_definitions.cmake  config_utils.cmake
docs/: android-build.md  index.md
docs/cli/: reference.md
docs/getting-started/: first-app.md  installation.md
docs/guides/: android.md  manifest.md  packaging.md  permissions.md
docs/sdk/: app-lifecycle.md  network.md  secure-storage.md  storage.md
docs/ui/: components.md  overview.md
examples/: CLAUDE.md
examples/apps/color-picker/: manifest.json
examples/apps/color-picker/qml/: Main.qml
examples/apps/counter/: manifest.json
examples/apps/counter/qml/: Main.qml
examples/apps/finance/: manifest.json
examples/apps/finance/qml/: AddTransactionPage.qml  DashboardPage.qml  DataManager.js  Main.qml  TransactionsPage.qml
examples/apps/habit-tracker/: manifest.json
examples/apps/habit-tracker/qml/: Main.qml
examples/apps/hello-world/: manifest.json
examples/apps/hello-world/qml/: Main.qml
examples/apps/iot-dashboard/: manifest.json
examples/apps/iot-dashboard/qml/: Main.qml
examples/apps/markdown-notes/: manifest.json
examples/apps/markdown-notes/qml/: Main.qml
examples/apps/pomodoro-timer/: manifest.json
examples/apps/pomodoro-timer/qml/: Main.qml
examples/apps/qml-playground/: manifest.json
examples/apps/qml-playground/qml/: Main.qml
examples/apps/todo/: manifest.json
examples/apps/todo/qml/: Main.qml
examples/apps/unit-converter/: manifest.json
examples/apps/unit-converter/qml/: Main.qml
examples/apps/weather/: manifest.json
examples/apps/weather/qml/: Main.qml
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
linux/: com.squared.app.desktop
qml/: AppShell.qml  CLAUDE.md  DevWindow.qml  InstalledPage.qml  Main.qml  StorePage.qml
server/: .env.example  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
server/cmd/server/: main.go
server/internal/config/: config.go
server/internal/crypto/: crypto.go
server/internal/handler/: apps.go  catalog.go  health.go  secrets.go
server/internal/middleware/: auth.go  bodylimit.go  cors.go  logging.go  ratelimit.go  recovery.go  requestid.go  security.go
server/internal/model/: app.go
server/internal/server/: server.go
server/internal/store/: errors.go  postgres.go  store.go
server/migrations/: 000001_create_apps_table.up.sql  000002_seed_data.down.sql  000002_seed_data.up.sql  000003_create_app_secrets_table.up.sql  000004_add_icon_color.down.sql  000004_add_icon_color.up.sql
src/: CLAUDE.md  CMakeLists.txt  main.cpp
src/core/: AppCatalog.cpp  AppCatalog.h  AppInstaller.cpp  AppInstaller.h  AppManifest.cpp  AppManifest.h  AppRegistry.cpp  AppRegistry.h  AppRunner.cpp  AppRunner.h  CLAUDE.md  CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h  PackageDownloader.cpp  PackageDownloader.h  ThemeManager.cpp  ThemeManager.h
src/sdk/api/: AppSingleton.h  CMakeLists.txt  NetworkReplySingleton.h  NetworkSingleton.h  SecureStorageReplySingleton.h  SecureStorageSingleton.h  StorageSingleton.h
src/sdk/core/: CLAUDE.md  CMakeLists.txt  SquaredApp.cpp  SquaredApp.h
src/sdk/network/: CMakeLists.txt  NetworkClient.cpp  NetworkClient.h  NetworkReply.cpp  NetworkReply.h
src/sdk/storage/: AppStorage.cpp  AppStorage.h  CLAUDE.md  CMakeLists.txt  SecureStorage.cpp  SecureStorage.h  SecureStorageReply.cpp  SecureStorageReply.h
src/sdk/ui/: CLAUDE.md  CMakeLists.txt  ComponentGallery.qml  IconCodes.qml  SAvatar.qml  SBadge.qml  SButton.qml  SCard.qml  SCardBody.qml  SCardHeader.qml  SCheckbox.qml  SDialog.qml  SDivider.qml  SDropdown.qml  SEmptyState.qml  SGrid.qml  SIcon.qml  SListItem.qml  SLoadingSpinner.qml  SMetric.qml  SPage.qml  SProgressBar.qml  SRadioGroup.qml  SScrollView.qml  SSearchField.qml  SSection.qml  SSize.qml  SSlider.qml  SSpacer.qml  SSwitch.qml  SText.qml  STextField.qml  STheme.qml  SToast.qml  gallery_main.cpp  qmldir
tests/: CLAUDE.md  CMakeLists.txt
tests/cpp/: CMakeLists.txt  tst_appcatalog.cpp  tst_appinstaller.cpp  tst_appmanifest.cpp  tst_appregistry.cpp  tst_apprunner.cpp  tst_appstorage.cpp  tst_networkclient.cpp  tst_securestorage.cpp
tests/qml/: CMakeLists.txt  runner.cpp  tst_SAvatar.qml  tst_SBadge.qml  tst_SButton.qml  tst_SCard.qml  tst_SCardBody.qml  tst_SCardHeader.qml  tst_SCheckbox.qml  tst_SDialog.qml  tst_SDivider.qml  tst_SDropdown.qml  tst_SEmptyState.qml  tst_SGrid.qml  tst_SIcon.qml  tst_SListItem.qml  tst_SLoadingSpinner.qml  tst_SMetric.qml  tst_SPage.qml  tst_SProgressBar.qml  tst_SRadioGroup.qml  tst_SScrollView.qml  tst_SSearchField.qml  tst_SSection.qml  tst_SSize.qml  tst_SSlider.qml  tst_SSpacer.qml  tst_SSwitch.qml  tst_SText.qml  tst_STextField.qml  tst_STheme.qml  tst_SToast.qml
tools/: build-android.sh  generate_icons.py  test-release.sh
tools/squared-cli/: .goreleaser.yml  CLAUDE.md  go.mod  main.go  sync-sdk.sh
tools/squared-cli/cmd/: init.go  package.go  publish.go  run.go  setup.go  update.go  validate.go
tools/squared-cli/internal/manifest/: manifest.go  manifest_test.go
tools/squared-cli/internal/packager/: packager.go  packager_test.go
tools/squared-cli/internal/sdk/: embed.go
